Sonar adjusts